[package]
name = "cardsapi"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
rand = "0.9"
rocket = { version = "0.5.1", features = ["json"] }
rocket_ws = "0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
uuid = { version = "1.22.0", features = ["v4", "serde"] }
